# voice-computer-use-agent

./: .gitignore  404.html  AGENTS.md  LICENSE  README.md  config.yaml  mkdocs.yml  plan.md  pyproject.toml  requirements.txt  scratch.md  sitemap.xml  updates.json
.agentic-memory/: telemetry.sqlite3
.agents/plugins/: marketplace.json
.codex/skills/codex-computer-use/: SKILL.md
.codex/skills/codex-computer-use/agents/: openai.yaml
.codex/skills/codex-computer-use/references/: action-contract.md
.codex/skills/codex-computer-use/scripts/: build_prompt.py
.github/workflows/: build.yml  ci.yml  deploy-pages.yml  publish-pypi.yml  release.yml
architecture/: index.html
backend/: README.md  license_server.py  requirements.txt
cybernetic-autopilot-landing/: index.html  package-lock.json  package.json  vite.config.js
cybernetic-autopilot-landing/src/: App.jsx  index.css  main.jsx
cybernetic-autopilot-landing/src/components/: ConsoleWidget.jsx  Header.jsx  Hero.jsx  InstallSection.jsx  SecurityGuardWidget.jsx  SpecsSection.jsx
docs/: ARCHITECTURE_DIAGRAMS.md  architecture.md  configuration.md  development.md  index.md  installation.md  plugins.md  safety.md  troubleshooting.md  usage.md
docs/private/: README.md
docs/stylesheets/: extra.css
landing-page/: index.html  script.js  styles.css
landing-page/docs/: architecture.html  configuration.html  development.html  index.html  installation.html  plugins.html  safety.html  sitemap.xml  troubleshooting.html  usage.html
landing-page/docs/ARCHITECTURE_DIAGRAMS/: index.html
landing-page/docs/configuration/: index.html
landing-page/docs/development/: index.html
landing-page/docs/installation/: index.html
landing-page/docs/plugins/: index.html
landing-page/docs/search/: search_index.json
landing-page/docs/usage/: index.html
plugins/voiceuse-computer-control/: .mcp.json
plugins/voiceuse-computer-control/.codex-plugin/: plugin.json
plugins/voiceuse-computer-control/scripts/: mcp_server.py
plugins/voiceuse-computer-control/skills/voiceuse-computer-control/: SKILL.md
safety/: index.html
scripts/: build_landing_docs.py
stylesheets/: extra.css
tests/: __init__.py  test_action_audit.py  test_agent_backend.py  test_application_pipeline.py  test_audio_device.py  test_brain.py  test_config.py  test_grok_voice_client.py  test_models.py  test_observability.py  test_os_controller.py  test_os_services.py  test_plugins.py  test_safety.py  test_tts_manager.py  test_updater.py  test_vision_bridge.py  test_voiceuse_computer_control_plugin.py
troubleshooting/: index.html
voiceuse/: __init__.py  __main__.py  action_audit.py  agent_backend.py  audio_device.py  brain.py  computer_control_mcp.py  config.py  health.py  input_manager.py  main.py  models.py  observability.py  os_controller.py  os_services.py  retry.py  safety.py  tool_registry.py  tts_manager.py  updater.py  vision_bridge.py
voiceuse/browser_agent/: README.md  __init__.py  __main__.py  agent.py  controller.py  web.py
voiceuse/browser_agent/static/: index.html
voiceuse/gui/: __init__.py
voiceuse/licensing/: __init__.py
voiceuse/plugins/: __init__.py  base.py
voiceuse/plugins/grok_voice/: __init__.py  audio_streamer.py  client.py  plugin.py
